<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="5"
    android:orientation="vertical">

    <TextView
        android:id="@+id/id_task_create_description"
        android:layout_columnSpan="5"
        android:text="@string/task_create_description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/task_name" />

    <EditText
        android:layout_column="1"
        android:layout_row="1"
        android:inputType="text" />

    <TextView
        android:layout_column="0"
        android:layout_row="2"
        android:text="@string/task_picture" />

    <EditText
        android:layout_column="1"
        android:layout_row="2"
        android:inputType="text" />

    <Button
        android:layout_column="3"
        android:layout_row="2"
        android:text="@string/select_picture" />

    <TextView
        android:layout_column="0"
        android:layout_row="3"
        android:text="@string/task_picture" />

    <EditText
        android:layout_column="1"
        android:layout_row="3"
        android:inputType="text" />

    <Button
        android:layout_column="3"
        android:layout_row="3"
        android:text="@string/select_sound" />

    <Button
        android:layout_column="4"
        android:layout_row="3"
        android:text="@string/listen_sound" />

    <TextView
        android:layout_column="0"
        android:layout_row="4"
        android:text="@string/duration_time" />

    <EditText
        android:layout_column="1"
        android:layout_row="4"
        android:inputType="text" />

    <Button
        android:layout_column="4"
        android:layout_row="5"
        android:text="@string/next" />

</GridLayout>
