<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <RelativeLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/id_layout_child_settings_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.child_settings.ChildSettingsActivity">

    <GridLayout
      android:id="@+id/gridLayout"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginEnd="364dp"
      android:layout_alignParentEnd="true"
      android:layout_alignParentTop="true"
      android:padding="5dp"
      android:alignmentMode="alignBounds"
      android:columnCount="5"
      android:orientation="vertical"
      android:stretchMode="columnWidth">

    </GridLayout>
    <android.support.v7.widget.RecyclerView
      android:id="@+id/rv_child_settings_plan_list"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="50dp"
      android:layout_marginEnd="6dp"
      android:layout_alignEnd="@+id/gridLayout"
      android:layout_alignTop="@+id/gridLayout"
      android:scrollbars="vertical"
      tools:listitem="@layout/item_active_plan"></android.support.v7.widget.RecyclerView>

    <ScrollView
      android:id="@+id/ScrollView01"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:layout_alignTop="@+id/rv_child_settings_plan_list"
      android:layout_toEndOf="@+id/rv_child_settings_plan_list"
      android:fillViewport="true">
      <GridLayout
        android:id="@+id/gridLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/gridLayout"
        android:layout_toEndOf="@+id/rv_child_settings_plan_list"
        android:columnCount="6"
        android:rowCount="10">
        <TextView
          android:id="@+id/id_tv_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="3"
          android:paddingTop="10dp"
          android:paddingBottom="10dp"
          android:text="@string/child_name" />
        <TextView
          android:id="@+id/id_tv_surname"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="4"
          android:paddingTop="10dp"
          android:paddingBottom="10dp"
          android:text="@string/child_surname" />
        <TextView
          android:id="@+id/id_tv_font_size"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="5"
          android:paddingTop="10dp"
          android:paddingBottom="10dp"
          android:text="@string/font_size" />
        <TextView
          android:id="@+id/id_tv_task_mode"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="6"
          android:paddingTop="10dp"
          android:paddingBottom="10dp"
          android:text="@string/task_mode" />
        <TextView
          android:id="@+id/id_tv_timer_sound"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="7"
          android:paddingTop="10dp"
          android:paddingBottom="10dp"
          android:text="@string/timer_sound" />
        <TextView
          android:id="@+id/id_tv_step_mode"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="0"
          android:layout_row="8"
          android:paddingTop="10dp"
          android:paddingBottom="10dp"
          android:text="@string/step_mode" />
        <EditText
          android:id="@+id/id_et_child_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="3"
          android:minWidth="100dp" />
        <EditText
          android:id="@+id/id_et_child_surname"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="4"
          android:minWidth="100dp" />
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_columnSpan="3"
          android:layout_row="5"
          android:orientation="horizontal">
          <RadioButton
            android:id="@+id/id_rb_font_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big" />
          <RadioButton
            android:id="@+id/id_rb_font_medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medium" />
          <RadioButton
            android:id="@+id/id_rb_font_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small" />
        </RadioGroup>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_columnSpan="3"
          android:layout_row="6"
          android:orientation="horizontal">
          <RadioButton
            android:id="@+id/id_rb_task_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list" />
          <RadioButton
            android:id="@+id/id_rb_task_slide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide" />
        </RadioGroup>
        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_columnSpan="3"
          android:layout_row="8"
          android:orientation="horizontal">
          <RadioButton
            android:id="@+id/id_rb_step_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list" />
          <RadioButton
            android:id="@+id/id_rb_step_slide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slide" />
        </RadioGroup>
        <EditText
          android:id="@+id/id_et_timer_sound"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="1"
          android:layout_row="7"
          android:cursorVisible="false"
          android:focusable="false"
          android:inputType="text|textNoSuggestions"
          android:minWidth="100dp" />

        <RelativeLayout
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="2"
          android:layout_row="7">

          <!--"x" clear sound btn -->
          <ImageButton
            android:id="@+id/id_ib_settings_clear_sound_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_gravity="end|center_vertical"
            android:background="@android:drawable/ic_menu_close_clear_cancel"
            android:contentDescription="@string/clear_sound"
            android:visibility="invisible" />

          <!--Play/Stop sound button-->
          <ImageButton
            android:id="@+id/id_btn_settings_play_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="11dp"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/id_ib_settings_clear_sound_btn"
            android:adjustViewBounds="true"
            android:background="@color/transparent"
            android:elevation="1dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_sound"
            android:visibility="invisible" />
        </RelativeLayout>
        <Button
          android:id="@+id/id_btn_select_timer_sound"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_column="3"
          android:layout_row="7"
          android:text="@string/select" />
      </GridLayout>
    </ScrollView>
    <TextView
      android:id="@+id/id_child_settings_change_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBaseline="@+id/id_child_settings_select_plan_description"
      android:layout_alignBottom="@+id/id_child_settings_select_plan_description"
      android:layout_columnSpan="5"
      android:layout_toEndOf="@+id/rv_child_settings_plan_list"
      android:background="#cccccc"
      android:text="@string/child_settings_change"
      android:textAppearance="?android:attr/textAppearanceLarge" />
    <TextView
      android:id="@+id/id_child_settings_select_plan_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:layout_columnSpan="5"
      android:background="#cccccc"
      android:text="@string/child_settings_select_plan"
      android:textAppearance="?android:attr/textAppearanceLarge" />
  </RelativeLayout>
</layout>
